FIX: minor header spacing update

--- a/sass/acf-blocks/_banner.sass
+++ b/sass/acf-blocks/_banner.sass
@@ -47,7 +47,7 @@ section.banner
             height: calc(100vh - 190px - 50px)
             min-height: 500px
             +max-screen($breakpoint-xxl) // Non header fixed sizes
-                height: calc(100vh - 150px - 40px)
+                height: calc(100vh - 140px - 40px)
             +max-screen($breakpoint-xl)
                 height: calc(100vh - 110px - 40px)
                 width: calc(100% + 40px)
